--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 /*
-    Name: Qash
-    Author: Qkit
+    Name: SteamX
+    Author: SteamX
     Author Portfolio : https://themeforest.net/user/qkit/portfolio
     Email: qkit.inc@gmail.com
     Skype: sporsho9 
@@ -43,7 +43,7 @@
   --bs-white          : #fff;
   --bs-gray           : #6c757d;
   --bs-gray-dark      : #343a40;
-  --bs-primary        : #556ee6;
+  --bs-primary        : #d3942b;
   --bs-secondary      : #74788d;
   --bs-success        : #34c38f;
   --bs-info           : #50a5f1;
@@ -247,7 +247,7 @@ sup {
 }
 
 a {
-  color          : #556ee6;
+  color          : #d3942b;
   text-decoration: underline;
 }
 
@@ -2443,8 +2443,8 @@ progress {
 }
 
 .form-check-input:checked {
-  background-color: #556ee6;
-  border-color    : #556ee6;
+  background-color: #d3942b;
+  border-color    : #d3942b;
 }
 
 .form-check-input:checked[type="checkbox"] {
@@ -2456,8 +2456,8 @@ progress {
 }
 
 .form-check-input[type="checkbox"]:indeterminate {
-  background-color: #556ee6;
-  border-color    : #556ee6;
+  background-color: #d3942b;
+  border-color    : #d3942b;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 
@@ -2625,7 +2625,7 @@ progress {
   width           : 1rem;
   height          : 1rem;
   margin-top      : -0.25rem;
-  background-color: #556ee6;
+  background-color: #d3942b;
   border          : 0;
   border-radius   : 1rem;
   transition      : background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2655,7 +2655,7 @@ progress {
 .form-range::-moz-range-thumb {
   width           : 1rem;
   height          : 1rem;
-  background-color: #556ee6;
+  background-color: #d3942b;
   border          : 0;
   border-radius   : 1rem;
   transition      : background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2688,7 +2688,7 @@ progress {
   margin-top      : 0;
   margin-right    : 0.25rem;
   margin-left     : 0.25rem;
-  background-color: #556ee6;
+  background-color: #d3942b;
   border          : 0;
   border-radius   : 1rem;
   transition      : background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3099,8 +3099,8 @@ fieldset:disabled .btn {
 
 .btn-primary {
   color           : #000;
-  background-color: #556ee6;
-  border-color    : #556ee6;
+  background-color: #d3942b;
+  border-color    : #d3942b;
 }
 
 .btn-primary:hover {
@@ -3138,8 +3138,8 @@ fieldset:disabled .btn {
 .btn-primary:disabled,
 .btn-primary.disabled {
   color           : #000;
-  background-color: #556ee6;
-  border-color    : #556ee6;
+  background-color: #d3942b;
+  border-color    : #d3942b;
 }
 
 .btn-secondary {
@@ -3458,14 +3458,14 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-  color       : #556ee6;
-  border-color: #556ee6;
+  color       : #d3942b;
+  border-color: #d3942b;
 }
 
 .btn-outline-primary:hover {
   color           : #000;
-  background-color: #556ee6;
-  border-color    : #556ee6;
+  background-color: #d3942b;
+  border-color    : #d3942b;
 }
 
 .btn-check:focus+.btn-outline-primary,
@@ -3479,8 +3479,8 @@ fieldset:disabled .btn {
 .btn-outline-primary.active,
 .btn-outline-primary.dropdown-toggle.show {
   color           : #000;
-  background-color: #556ee6;
-  border-color    : #556ee6;
+  background-color: #d3942b;
+  border-color    : #d3942b;
 }
 
 .btn-check:checked+.btn-outline-primary:focus,
@@ -3493,7 +3493,7 @@ fieldset:disabled .btn {
 
 .btn-outline-primary:disabled,
 .btn-outline-primary.disabled {
-  color           : #556ee6;
+  color           : #d3942b;
   background-color: transparent;
 }
 
@@ -3779,7 +3779,7 @@ fieldset:disabled .btn {
 
 .btn-link {
   font-weight    : 400;
-  color          : #556ee6;
+  color          : #d3942b;
   text-decoration: underline;
 }
 
@@ -4085,7 +4085,7 @@ fieldset:disabled .btn {
 .dropdown-item:active {
   color           : #fff;
   text-decoration : none;
-  background-color: #556ee6;
+  background-color: #d3942b;
 }
 
 .dropdown-item.disabled,
@@ -4133,7 +4133,7 @@ fieldset:disabled .btn {
 .dropdown-menu-dark .dropdown-item.active,
 .dropdown-menu-dark .dropdown-item:active {
   color           : #fff;
-  background-color: #556ee6;
+  background-color: #d3942b;
 }
 
 .dropdown-menu-dark .dropdown-item.disabled,
@@ -4333,7 +4333,7 @@ fieldset:disabled .btn {
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
   color           : #fff;
-  background-color: #556ee6;
+  background-color: #d3942b;
 }
 
 .nav-fill>.nav-link,
@@ -4954,7 +4954,7 @@ fieldset:disabled .btn {
 .page-link {
   position        : relative;
   display         : block;
-  color           : #556ee6;
+  color           : #d3942b;
   text-decoration : none;
   background-color: #fff;
   border          : 1px solid #dee2e6;
@@ -4989,8 +4989,8 @@ fieldset:disabled .btn {
 .page-item.active .page-link {
   z-index         : 3;
   color           : #fff;
-  background-color: #556ee6;
-  border-color    : #556ee6;
+  background-color: #d3942b;
+  border-color    : #d3942b;
 }
 
 .page-item.disabled .page-link {
@@ -5196,7 +5196,7 @@ fieldset:disabled .btn {
   color           : #fff;
   text-align      : center;
   white-space     : nowrap;
-  background-color: #556ee6;
+  background-color: #d3942b;
   transition      : width 0.6s ease;
 }
 
@@ -5277,8 +5277,8 @@ fieldset:disabled .btn {
 .list-group-item.active {
   z-index         : 2;
   color           : #fff;
-  background-color: #556ee6;
-  border-color    : #556ee6;
+  background-color: #d3942b;
+  border-color    : #d3942b;
 }
 
 .list-group-item+.list-group-item {
@@ -6607,7 +6607,7 @@ fieldset:disabled .btn {
 }
 
 .link-primary {
-  color: #556ee6;
+  color: #d3942b;
 }
 
 .link-primary:hover,
@@ -7013,7 +7013,7 @@ fieldset:disabled .btn {
 }
 
 .border-primary {
-  border-color: #556ee6 !important;
+  border-color: #d3942b !important;
 }
 
 .border-secondary {
@@ -7743,7 +7743,7 @@ fieldset:disabled .btn {
 }
 
 .text-primary {
-  color: #556ee6 !important;
+  color: #d3942b !important;
 }
 
 .text-secondary {
@@ -7815,7 +7815,7 @@ fieldset:disabled .btn {
 }
 
 .bg-primary {
-  background-color: #556ee6 !important;
+  background-color: #d3942b !important;
 }
 
 .bg-secondary {
@@ -11178,7 +11178,7 @@ li {
 }
 
 a {
-  color          : #556ee6;
+  color          : #d3942b;
   text-decoration: none;
   outline        : none;
 }
@@ -11188,7 +11188,7 @@ a:focus,
 a.active {
   text-decoration: none;
   outline        : none;
-  color          : #556ee6;
+  color          : #d3942b;
 }
 
 b,
@@ -11301,7 +11301,7 @@ strong {
 }
 
 #preloader i:nth-child(1) {
-  background       : #556ee6;
+  background       : #d3942b;
   -webkit-animation: googleDotA 1.75s ease-in-out infinite;
 }
 
@@ -11512,7 +11512,7 @@ strong {
 .header .brand-logo span {
   font-weight   : bold;
   text-transform: uppercase;
-  color         : #556ee6;
+  color         : #d3942b;
   display       : inline-block;
   position      : relative;
   top           : 3px;
@@ -11756,14 +11756,14 @@ strong {
 .profile_log .dropdown-menu .dropdown-item i {
   margin-right: 10px;
   font-size   : 18px;
-  color       : #556ee6;
+  color       : #d3942b;
   font-weight : bold;
 }
 
 .profile_log .dropdown-menu .dropdown-item:hover,
 .profile_log .dropdown-menu .dropdown-item:focus,
 .profile_log .dropdown-menu .dropdown-item.active {
-  background-color: #556ee6;
+  background-color: #d3942b;
   color           : #fff;
 }
 
@@ -11896,7 +11896,7 @@ strong {
 }
 
 .sidebar {
-  background   : #1830a3;
+  background   : #d4840c;
   position     : fixed;
   left         : 20px;
   height       : calc(100%-20px);
@@ -12169,7 +12169,7 @@ strong {
 
 .dark-theme .form-file-button {
   border-color: rgba(255, 255, 255, 0.08);
-  background  : #556ee6;
+  background  : #d3942b;
   color       : #fff;
 }
 
@@ -12321,7 +12321,7 @@ strong {
 .form-control.active {
   box-shadow  : none !important;
   outline     : none;
-  border-color: #556ee6;
+  border-color: #d3942b;
   color       : #343a40;
   background  : #fff;
 }
@@ -12347,7 +12347,7 @@ strong {
 .form-select.active {
   box-shadow  : none !important;
   outline     : none;
-  border-color: #556ee6;
+  border-color: #d3942b;
   color       : #343a40;
 }
 
@@ -12478,7 +12478,7 @@ button:active,
 }
 
 .welcome-profile {
-  background: #556ee6 !important;
+  background: #d3942b !important;
 }
 
 .welcome-profile .card-body img {
@@ -12546,7 +12546,7 @@ button:active,
 }
 
 .trade-form p a {
-  color: #556ee6;
+  color: #d3942b;
 }
 
 .balance-chart h4,
@@ -12605,7 +12605,7 @@ button:active,
 }
 
 .invite-content .input-group-text {
-  background: #556ee6;
+  background: #d3942b;
   color     : #fff;
 }
 
@@ -12646,7 +12646,7 @@ button:active,
 }
 
 .price-carousel button {
-  background: #556ee6;
+  background: #d3942b;
   width     : 30px;
   height    : 30px;
 }
@@ -12668,7 +12668,7 @@ button:active,
 .price-carousel button:hover,
 .price-carousel button:focus,
 .price-carousel button.active {
-  background: #556ee6;
+  background: #d3942b;
 }
 
 .price-widget {
@@ -12796,13 +12796,13 @@ button:active,
   border-radius  : 100px;
   margin         : 0 auto;
   background     : #fff;
-  color          : #556ee6;
+  color          : #d3942b;
   font-size      : 30px;
   padding        : 10px;
   align-items    : center;
   justify-content: center;
   margin-bottom  : 30px;
-  border         : 1px solid #556ee6;
+  border         : 1px solid #d3942b;
 }
 
 .identity-content h4,
@@ -12832,7 +12832,7 @@ button:active,
 .settings-menu a:focus,
 .settings-menu a:active,
 .settings-menu a.active {
-  color: #556ee6;
+  color: #d3942b;
 }
 
 .verify-content {
